--- a/src/sass/fragments/_palette.scss
+++ b/src/sass/fragments/_palette.scss
@@ -1,5 +1,17 @@
-$app-primary: #ffffff;
-$app-primary-darken: #f7f7f7;
-$app-primary-alpha: #ffffffb3;
+$app-primary: #512DA8;
+$app-primary-darken: #311B92;
+$app-primary-lighten: #673AB7;
 
-$text-primary: #2c3e50;
+$app-secondary: #00796B;
+$app-secondary-darken: #004D40;
+$app-secondary-lighten: #009688;
+
+$app-background: #FFFFFF;
+$app-surface: #FFFFFF;
+$app-error: #B00020;
+
+$on-primary: #FFFFFF;
+$on-secondary: #000000;
+$on-background: #000000;
+$on-surface: #000000;
+$on-error: #000000;
