--- a/src/sass/fragments/_font.scss
+++ b/src/sass/fragments/_font.scss
@@ -1,3 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 $family: 'Inter', sans-serif;
+
+$size-s: 14px;
+$size-m: 16px;
+$size-l: 20px;
