Добавить набор начертаний шрифтов

--- a/src/sass/fragments/_font.scss
+++ b/src/sass/fragments/_font.scss
@@ -2,6 +2,10 @@
 
 $family: 'Inter', sans-serif;
 
-$size-s: 14px;
-$size-m: 16px;
-$size-l: 20px;
+$size-s: 12px;
+$size-m: 14px;
+$size-l: 18px;
+
+$weight-s: 200;
+$weight-m: 400;
+$weight-l: 500;
