Добавить набор цветов для текстов

--- a/src/sass/fragments/_palette.scss
+++ b/src/sass/fragments/_palette.scss
@@ -7,7 +7,7 @@ $secondary-dark: #311B92;
 $secondary-light: #673AB7;
 
 $background: #ffffff;
-$surface: #f3f3f3;
+$surface: #f6f8fa;
 $separator: #f3f3f3;
 
 $success: #88c459;
@@ -18,7 +18,10 @@ $on-primary: #f3f3f3;
 $on-secondary: #222222;
 
 $on-background: #222222;
-$on-surface: #222222;
+
+$on-surface: #3b4651;
+$on-surface-dark: #12131a;
+$on-surface-light: #909ab4;
 
 $on-success: #222222;
 $on-warning: #222222;
